# naali

./: CMakeBuildConfigTemplate.txt  CMakeLists.txt
Asset/: AssetAPI.cpp  AssetCache.cpp  AssetCache.h
AssetModule/: HttpAssetProvider.cpp
CMakeModules/: ConfigurePackages.cmake
CameraInputModule/: CMakeLists.txt  CameraInputModuleApi.h
EnvironmentModule/: EC_EnvironmentLight.cpp  EC_SkyBox.cpp  EC_SkyDome.cpp  EC_SkyPlane.cpp  EC_Terrain.cpp  EC_WaterPlane.cpp  Environment.cpp
Foundation/: Application.cpp  Framework.cpp
JavascriptModule/: ScriptCoreTypeDefines.cpp
KristalliProtocolModule/: KristalliProtocolModule.cpp  KristalliProtocolModule.h
LoginScreenModule/: LoginScreenModule.cpp
MobilityModule/: CMakeLists.txt  MobilityModule.cpp  MobilityModule.h
MumbleVoipModule/: CMakeLists.txt  Channel.cpp  Connection.cpp  MumbleLibrary.cpp  Session.cpp
OgreRenderingModule/: EC_BillboardWidget.cpp  EC_Mesh.cpp  EC_OgreCamera.cpp  EC_OgreCustomObject.cpp  EC_OgreEnvironment.cpp  EC_OgreSky.cpp  EC_Placeable.cpp  (+5 more)
XMPPModule/: AccountManager.cpp  AccountManager.h  CMakeLists.txt  Client.cpp  Client.h  MucRoom.cpp  MucRoom.h  UserItem.cpp  UserItem.h  VoiceCall.cpp  VoiceCall.h  XMPPModule.cpp  XMPPModule.h  XMPPModule.xml
XMPPModule/Client/: Call.cpp  Call.h  CallExtension.cpp  CallExtension.h  ChatExtension.cpp  ChatExtension.h  Client.cpp  Client.h  Extension.cpp  Extension.h  MucExtension.cpp  MucExtension.h  UserItem.cpp  UserItem.h
XMPPModule/Server/: PasswordChecker.cpp  PasswordChecker.h  RosterExtension.cpp  RosterExtension.h  Server.cpp  Server.h
(+94 files in other folders)
